--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.dev",
-    "build": "mkdir public && npm run build:static && webpack --progress --config webpack/webpack.prod",
-    "build:static": "babel-node ./scripts/exportHTML.js"
+    "build": "npm run build:static && npm run build:scss && webpack --progress --config webpack/webpack.prod",
+    "export:scss":"find ./src -iname '*.scss'  -exec echo \"@import '{}';\" \\; > index.scss",
+    "build:scss":"npm run export:scss && sass index.scss ./public/styles.css --no-source-map && rm index.scss",
+    "build:static": "npm run clear:imports && mkdir -p public && babel-node ./scripts/exportHTML.js",
+    "clear:imports":"find ./src/ -type f -exec sed -i '' -e '/.scss/d' {} \\;"
+
   },
   "dependencies": {
     "@babel/cli": "^7.14.5",
@@ -20,10 +24,12 @@
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
   },
