--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.dev",
-    "build": "npm run build:static && npm run build:scss && webpack --progress --config webpack/webpack.prod",
-    "export:scss": "find ./src -iname '*.scss'  -exec echo \"@import '{}';\" \\; > index.scss",
-    "build:scss": "npm run export:scss && sass index.scss ./public/styles.css --no-source-map && rm index.scss",
+    "build": "webpack --progress --config webpack/webpack.prod",
+    "build:old": "webpack --progress --config webpack/webpack.prod && npm run build:static",
     "build:static": "npm run clear:imports && mkdir -p public && babel-node ./scripts/exportHTML.js",
     "clear:imports": "find ./src/ -type f -exec sed -i '' -e '/.scss/d' {} \\;"
   },
@@ -24,6 +23,11 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "extract-loader": "^5.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.34.1",
