--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CV",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "this is a CV project",
   "main": "src",
   "repository": "git@github.com:evgeniyraev/curriculumVitae.git",
@@ -12,22 +12,21 @@
     "build": "webpack --progress --config webpack/webpack.prod && node dist -p"
   },
   "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.5",
-    "@babel/parser": "^7.14.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "mini-css-extract-plugin": "^1.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
-    "style-loader": "^2.0.0"
-  },
-  "devDependencies": {
+    "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
